--- a/website-projexts/Views/Home/Index.cshtml
+++ b/website-projexts/Views/Home/Index.cshtml
@@ -7,52 +7,209 @@
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/Content/fonts/ionicons.min.css")
 <body>
-
-    <header class="masthead" style="background-image:url('../../Content/img/header-bg.jpg');">
-        <div class="container">
-            <div class="intro-text">
-                <div class="intro-lead-in"><span>Welcome To Our Studio!</span></div>
-                <div class="intro-heading text-uppercase"><span>It's Nice To Meet You</span></div>
-                <a class="btn btn-primary btn-xl text-uppercase" role="button" href="#services">Tell mE more</a>
-            </div>
-        </div>
-    </header>
-
-    <section class="d-block">
-        <div class="container">
-            <div class="heading">
-                <h2>Special Skills</h2>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="card special-skill-item border-0">
-                        <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div>
-                        <div class="card-body">
-                            <h3 class="card-title">Web Design</h3>
-                            <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card special-skill-item border-0">
-                        <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
-                        <div class="card-body">
-                            <h3 class="card-title">Interface Design</h3>
-                            <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card special-skill-item border-0">
-                        <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
-                        <div class="card-body">
-                            <h3 class="card-title">Photography and Print</h3>
-                            <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+    <main class="page lanidng-page">
+        <section>
+            <div data-bss-parallax-bg="true" style="height: 600px;background-image: url(&quot;assets/img/pexels-rdne-stock-project-6646918.jpg&quot;);background-position: center;background-size: cover;">
+                <div class="container h-100">
+                    <div class="row h-100">
+                        <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center">
+                            <div style="max-width: 350px;">
+                                <h1 class="text-uppercase fw-bold">Biben dum<br>fringi dictum, augue purus</h1>
+                                <p class="my-3">Tincidunt laoreet leo, adipiscing taciti tempor. Primis senectus sapien, risus donec ad fusce augue interdum.</p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Button</a><a class="btn btn-outline-primary btn-lg" role="button" href="#">Button</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+        <section class="portfolio-block skills">
+            <div class="container">
+                <div class="heading">
+                    <h2>Special Skills</h2>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div>
+                            <div class="card-body">
+                                <h3 class="card-title">Web Design</h3>
+                                <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
+                            <div class="card-body">
+                                <h3 class="card-title">Interface Design</h3>
+                                <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
+                            <div class="card-body">
+                                <h3 class="card-title">Photography and Print</h3>
+                                <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container py-4 py-xl-5">
+                <div class="row mb-5">
+                    <div class="col-md-8 col-xl-6 text-center mx-auto">
+                        <h2>Heading</h2>
+                        <p class="w-lg-50">Curae hendrerit donec commodo hendrerit egestas tempus, turpis facilisis nostra nunc. Vestibulum dui eget ultrices.</p>
+                    </div>
+                </div>
+                <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
+                    <div class="col">
+                        <div class="card">
+                            <img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                            <div class="card-body p-4">
+                                <p class="text-primary card-text mb-0">Article</p>
+                                <h4 class="card-title"><strong>Lorem libero donec</strong></h4>
+                                <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                <div class="progress">
+                                    <div class="progress-bar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">50%</div>
+                                </div>
+                                <div class="d-flex">
+                                    <div class="float-start">
+                                        <p class="fw-bold float-start mb-0">Raised</p>
+                                        <p class="text-muted mb-0">65,000$</p>
+                                    </div>
+                                    <div class="float-end ms-auto">
+                                        <p class="fw-bold mb-0">Goal</p>
+                                        <p class="text-muted mb-0">65,000$</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                            <div class="card-body p-4">
+                                <p class="text-primary card-text mb-0">Article</p>
+                                <h4 class="card-title"><strong>Lorem libero donec</strong></h4>
+                                <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                <div class="progress">
+                                    <div class="progress-bar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">50%</div>
+                                </div>
+                                <div class="d-flex">
+                                    <div class="float-start">
+                                        <p class="fw-bold float-start mb-0">Raised</p>
+                                        <p class="text-muted mb-0">65,000$</p>
+                                    </div>
+                                    <div class="float-end ms-auto">
+                                        <p class="fw-bold mb-0">Raised</p>
+                                        <p class="text-muted mb-0">65,000$</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <img class="card-img-top w-100 d-block fit-cover" style="height: 200px;" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                            <div class="card-body p-4">
+                                <p class="text-primary card-text mb-0">Article</p>
+                                <h4 class="card-title"><strong>Lorem libero donec</strong></h4>
+                                <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                                <div class="progress">
+                                    <div class="progress-bar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">50%</div>
+                                </div>
+                                <div class="d-flex">
+                                    <div class="float-start">
+                                        <p class="fw-bold float-start mb-0">Raised</p>
+                                        <p class="text-muted mb-0">65,000$</p>
+                                    </div>
+                                    <div class="float-end ms-auto">
+                                        <p class="fw-bold mb-0">Raised</p>
+                                        <p class="text-muted mb-0">65,000$</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container py-4 py-xl-5">
+                <div class="row gy-4 gy-md-0">
+                    <div class="col-md-6">
+                        <div class="p-xl-5 m-xl-5"><img class="rounded img-fluid w-100 fit-cover" style="min-height: 300px;" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png"></div>
+                    </div>
+                    <div class="col-md-6 d-md-flex align-items-md-center">
+                        <div style="max-width: 350px;">
+                            <h2 class="text-uppercase fw-bold">Biben dum<br>fringi dictum, augue purus</h2>
+                            <p class="my-3">Tincidunt laoreet leo, adipiscing taciti tempor. Primis senectus sapien, risus donec ad fusce augue interdum.</p><a class="btn btn-primary btn-lg me-2" role="button" href="#">Button</a><a class="btn btn-outline-primary btn-lg" role="button" href="#">Button</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container py-4 py-xl-5">
+                <div class="row mb-5">
+                    <div class="col-md-8 col-xl-6 text-center mx-auto">
+                        <h2>Testimonials</h2>
+                    </div>
+                </div>
+                <div class="row gy-4 row-cols-1 row-cols-sm-2 row-cols-lg-3">
+                    <div class="col">
+                        <div class="d-flex flex-column justify-content-center align-items-center">
+                            <p class="text-center">Nisi sit justo faucibus nec ornare amet, tortor torquent. Blandit class dapibus.</p>
+                            <div class="d-flex">
+                                <img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                                <div>
+                                    <p class="fw-bold text-primary mb-0">John Smith</p>
+                                    <p class="text-muted mb-0">Erat netus</p>
+                                </div>
+                            </div>
+                            <div class="card border-0 shadow-none">
+                                <div class="card-body d-flex align-items-center p-0"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="d-flex flex-column justify-content-center align-items-center">
+                            <p class="text-center">Nisi sit justo faucibus nec ornare amet, tortor torquent. Blandit class dapibus.</p>
+                            <div class="d-flex">
+                                <img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                                <div>
+                                    <p class="fw-bold text-primary mb-0">John Smith</p>
+                                    <p class="text-muted mb-0">Erat netus</p>
+                                </div>
+                            </div>
+                            <div class="card border-0 shadow-none">
+                                <div class="card-body d-flex align-items-center p-0"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="d-flex flex-column justify-content-center align-items-center">
+                            <p class="text-center">Nisi sit justo faucibus nec ornare amet, tortor torquent. Blandit class dapibus.</p>
+                            <div class="d-flex">
+                                <img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png">
+                                <div>
+                                    <p class="fw-bold text-primary mb-0">John Smith</p>
+                                    <p class="text-muted mb-0">Erat netus</p>
+                                </div>
+                            </div>
+                            <div class="card border-0 shadow-none">
+                                <div class="card-body d-flex align-items-center p-0"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
 </body>
