--- a/website-projexts/Views/Shared/_Layout.cshtml
+++ b/website-projexts/Views/Shared/_Layout.cshtml
@@ -10,22 +10,22 @@
 <body>
     <nav class="navbar navbar-expand-lg fixed-top bg-body clean-navbar navbar-light">
         <div class="container">
-            <a class="navbar-brand logo" href="#">Brand</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <a class="navbar-brand logo" href="#">Company</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="features.html">Features</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Trang chủ</a></li>
+                    <li class="nav-item"><a class="nav-link" href="features.html">Tính năng</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pricing.html">Khám phá</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about-us.html">Về chúng tôi</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact-us.html">Đăng Kí</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div>
-        @RenderBody()
-    </div>
-    <footer class="page-footer text-bg-dark ">
+
+    @RenderBody()
+
+    <footer class="page-footer dark">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
@@ -66,6 +66,7 @@
             <p>© 2023 Copyright Text</p>
         </div>
     </footer>
+
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
