--- a/website-projexts/Views/Shared/_Layout.cshtml
+++ b/website-projexts/Views/Shared/_Layout.cshtml
@@ -8,12 +8,12 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top bg-body clean-navbar navbar-light">
+    <nav class="navbar navbar-expand-lg bg-body clean-navbar navbar-light">
         <div class="container">
             <a class="navbar-brand logo" href="#">Company</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">TRAng chủ</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Trang chủ</a></li>
                     <li class="nav-item"><a class="nav-link" href="features.html">Tính năng</a></li>
                     <li class="nav-item"><a class="nav-link" href="pricing.html">Khám phá</a></li>
                     <li class="nav-item"><a class="nav-link" href="about-us.html">Về chúng tôi</a></li>
@@ -22,9 +22,9 @@
             </div>
         </div>
     </nav>
-
-    @RenderBody()
-
+    <section>
+        @RenderBody()
+    </section>
     <footer class="page-footer dark">
         <div class="container">
             <div class="row">
