--- a/website-projexts/Views/Home/Index.cshtml
+++ b/website-projexts/Views/Home/Index.cshtml
@@ -101,11 +101,11 @@
                                 </div>
                                 <div class="d-flex">
                                     <div class="float-start">
-                                        <p class="fw-bold float-start mb-0">Raised</p>
+                                        <p class="fw-bold float-start mb-0">Quyên góp</p>
                                         <p class="text-muted mb-0">65,000$</p>
                                     </div>
                                     <div class="float-end ms-auto">
-                                        <p class="fw-bold mb-0">Raised</p>
+                                        <p class="fw-bold mb-0">Mục tiêu</p>
                                         <p class="text-muted mb-0">65,000$</p>
                                     </div>
                                 </div>
@@ -118,17 +118,17 @@
                             <div class="card-body p-4">
                                 <p class="text-primary card-text mb-0">Công nghệ xanh</p>
                                 <h4 class="card-title"><strong>Ống hút gạo</strong></h4>
-                                <p class="card-text">Chúng tôi cung cấp các ống hút thân thiện với môi trường, được làm từ các vật liệu tái chế, để thay thế ống hút nhựa truyền thống nhằm bảo vệ môi trường.</p>
+                                <p class="card-text">Chúng tôi cung cấp các ống hút thân thiện với môi trường, được làm từ các vật liệu tái chế, để thay thế ống hút nhựa truyền thống.</p>
                                 <div class="progress">
                                     <div class="progress-bar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">50%</div>
                                 </div>
                                 <div class="d-flex">
                                     <div class="float-start">
-                                        <p class="fw-bold float-start mb-0">Raised</p>
+                                        <p class="fw-bold float-start mb-0">Quyên góp</p>
                                         <p class="text-muted mb-0">65,000$</p>
                                     </div>
                                     <div class="float-end ms-auto">
-                                        <p class="fw-bold mb-0">Raised</p>
+                                        <p class="fw-bold mb-0">Mục tiêu</p>
                                         <p class="text-muted mb-0">65,000$</p>
                                     </div>
                                 </div>
