--- a/website-projexts/Views/Shared/_Layout.cshtml
+++ b/website-projexts/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
     <section>
         @RenderBody()
     </section>
-    <footer class="page-footer dark">
+    <footer class="page-footer dark bg-dark">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
